fix z-indexes

--- a/src/event.less
+++ b/src/event.less
@@ -4,6 +4,7 @@
 @backgroundColor: #FAFAFB;
 
 .event {
+  z-index: 1;
   width: 100%;
 
   display: flex;
