--- a/src/style.less
+++ b/src/style.less
@@ -28,6 +28,7 @@ body, #root {
 }
 
 .line-svg {
+  z-index: 0;
   position: fixed;
   top: 227px;
   min-width: 1300px;
@@ -49,7 +50,7 @@ body, #root {
   border-radius: 10px;
   border: 3px @headerBorder solid;
   min-width: 700px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header-bar {
